<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context="com.example.group_32.chatloca.activities.MessageActivity">

    <LinearLayout
        android:id="@+id/linarelayout_Message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textview_NameMessage"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:fontFamily="Roboto"
            android:gravity="center"
            android:text="@string/user_s_name"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#FFC8D0FF"
            android:textSize="30sp"
            tools:ignore="RtlSymmetry" />


        <LinearLayout
            android:id="@+id/linearlayoutImage_Message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/textview_add_group_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/ic_add_group" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="100sp"
                android:orientation="vertical">
                <!--<TextView-->
                <!--android:layout_gravity="center"-->
                <!--android:id="@+id/txtv_status_user"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@drawable/status" />-->
                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/image_avatar"
                    android:layout_width="60sp"
                    android:layout_height="60sp"
                    android:src="@drawable/ic_user"
                    app:civ_border_color="#FFC8D0FF"
                    app:civ_border_width="1dp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textview_add_friend_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/ic_add_friend" />
        </LinearLayout>

        <android.support.v7.widget.SearchView
            android:id="@+id/searchview_Message"
            style="@style/SearchViewStyle"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="5sp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:paddingStart="5sp"
            android:queryHint="Search"
            android:singleLine="true"
            android:textColorHint="#FFC8D0FF"
            android:textSize="30sp"
            tools:ignore="RtlSymmetry" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/scrollView_Message"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/Linearlayoutchat_Message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

            </ScrollView>

            <ScrollView
                android:id="@+id/scrollviewAddfriend_Message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/LinearlayoutAddfriend_Message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>
        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>