<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/sign_in"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context="com.example.group_32.chatloca.activities.Sign_inActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >



    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250sp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_user"
                android:ems="10"
                android:paddingBottom="10sp"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/editText_SignInUsername"
                android:layout_width="247sp"
                android:layout_height="40sp"
                android:layout_marginStart="5sp"
                android:background="@drawable/line"
                android:ems="10"
                android:fontFamily="Roboto"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingBottom="5sp"
                android:singleLine="true"
                android:textColor="#202020"
                android:textColorHint="#A0A0A0"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_lock"
                android:ems="10"
                android:paddingBottom="10sp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_SignInPassword"
                android:layout_width="247sp"
                android:layout_height="40sp"
                android:layout_marginStart="5sp"
                android:background="@drawable/line"
                android:ems="10"
                android:fontFamily="Roboto"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="5sp"
                android:singleLine="true"
                android:textColor="#202020"
                android:textColorHint="#A0A0A0"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button_mail_signIn"
            android:layout_width="158sp"
            android:layout_height="50sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/button"
            android:fontFamily="Roboto"
            android:text="@string/sign_in"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#FFFFFFFF"
            android:textSize="18sp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/button_google_signIn"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:id="@+id/buttons"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="80sp"
                android:layout_marginEnd="5sp"
                android:fontFamily="Roboto"
                android:text="@string/dont_s_have_an_account"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="#202020"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TextView_SignUp"
                android:layout_width="83dp"
                android:layout_height="30dp"
                android:layout_marginEnd="50sp"
                android:fontFamily="Roboto"
                android:text="@string/sign_up"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="#FF1C3CFE"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
