...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_avatar"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="140dp"
                android:background="#000000"
                android:contentDescription="@string/todo" />

...
                android:textIsSelectable="true"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/button_Logout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10sp"
            android:background="@drawable/button"
            android:fontFamily="Roboto"
            android:text="@string/logout"
...
